--- a/pages/index.css
+++ b/pages/index.css
@@ -106,6 +106,7 @@
 }
 
 .recipes__title{
+    max-width: 580px;
     margin-bottom: 24px;
     font-family: "inter";
     font-style: normal;
@@ -114,6 +115,7 @@
 }
 
 .recipes__subtitle{
+    max-width: 430px;
     margin-bottom: 80px;
     font-family: "Noto Serif";
     font-style: normal;
@@ -126,6 +128,8 @@
     display: flex;
     gap: 100px;
     justify-content: space-around;
+    width: 480px;
+    height: 273px;
 }
 
 .recipes__iframe{
