--- a/pages/index.css
+++ b/pages/index.css
@@ -111,6 +111,7 @@
     font-family: "inter";
     font-style: normal;
     font-weight: 500;
+    font-size: 44px;
     line-height: 52px;
 }
 
@@ -140,6 +141,7 @@
     display: flex;
     justify-content: space-between;
     font-family: "Inter";
+    font-weight: 500;
     font-style: normal;
     font-size: 20px;
     line-height: 30px;
