--- a/pages/index.css
+++ b/pages/index.css
@@ -36,12 +36,16 @@
     margin: 0;
     list-style-type: none;
     gap: 20px;
-    
 }
 
 .nav__link{
     color:#000;
     text-decoration: none;
+    font-family: "Inter";
+    font-size: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
 }
 
 .header__title{
