--- a/pages/index.css
+++ b/pages/index.css
@@ -82,6 +82,12 @@
     display: flex;
     justify-content: space-between;
     margin-top: auto;
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 20px;
+    color: #6f6f6f;
 }
 
 .header__paragraph{
