--- a/pages/index.css
+++ b/pages/index.css
@@ -63,7 +63,7 @@
     max-width: 683px;
     margin: 28px 0 0;
     font-family: "Noto Serif";
-    font-weight: normal;
+    font-weight: 400;
     font-size: 20px;
     line-height: 30px;
 }
@@ -72,7 +72,7 @@
     display: flex;
     font-family: "Noto Serif";
     font-style: italic;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 60px;
     line-height: 72px;
     color: #2f60ed;
@@ -84,7 +84,7 @@
     margin-top: auto;
     font-family: "Inter";
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     color: #6f6f6f;
@@ -130,7 +130,7 @@
     margin-bottom: 80px;
     font-family: "Noto Serif";
     font-style: normal;
-    font-weight: normal;
+    font-weight: 400;
     font-size: 20px;
     line-height: 30px;
 }
