--- a/pages/index.css
+++ b/pages/index.css
@@ -42,7 +42,7 @@
     color:#000;
     text-decoration: none;
     font-family: "Inter";
-    font-size: normal;
+    font-size: 400;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
