--- a/pages/index.css
+++ b/pages/index.css
@@ -155,3 +155,89 @@
     font-size: 20px;
     line-height: 30px;
 }
+
+.reservation{
+    padding: 100px 0 120px;
+    background-color: #D9E7FF;
+    background-image: url(../images/background_reservation.svg);
+}
+
+.reservation__title{
+    margin: 0 0 80px;
+    text-align: center;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 44px;
+    line-height: 52px;
+}
+
+.reservation__form{
+    margin: 0 auto;
+}
+
+.form__fieldset{
+    padding: 0;
+    margin: 0;
+    border: none;
+}
+
+.form{
+    max-width: 385px;
+}
+
+.form__input{
+    display: block;
+    width: 100%;
+    padding: 0;
+    box-sizing: border-box;
+    max-width: 385px;
+    height: 60px;
+    margin-top: 8px;
+    border-radius: 4px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 30px;
+    color: #838383;
+}
+
+.form__button{
+    width: 100%;
+    padding: 0;
+    border: none;
+    height: 60px;
+    margin-bottom: 32px;
+    border-radius: 4px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.form__button:hover{
+    from{
+        opacity: 100%;
+    }
+    to{
+        opacity: 70%;
+    }
+}
+
+.form__label{
+    display: block;
+    margin: 0 0 32px;
+    font-family: Inter;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.form__checkbox{
+    width: 20px;
+    height: 20px;
+    margin-right: 12px;
+}
