--- a/pages/index.css
+++ b/pages/index.css
@@ -219,9 +219,11 @@
 
 .form__button:hover{
     from{
+        background-color: #1878dc;
         transition: opacity 100%;
     }
     to{
+        background-color: #3f96f3;
        transition: opacity 70%;
     }
 }
