--- a/pages/index.css
+++ b/pages/index.css
@@ -217,13 +217,12 @@
     line-height: 20px;
 }
 
-.form__button:hover{
-    from{
+@keyframes .form__button:hover{
+    from {
         background-color: #1878dc;
         transition: opacity 100%;
     }
-    
-    to{
+    to {
         background-color: #3f96f3;
        transition: opacity 70%;
     }
