--- a/pages/index.css
+++ b/pages/index.css
@@ -217,7 +217,7 @@
     line-height: 20px;
 }
 
-@keyframes form__button-hover{
+ .form__button:hover{
     from{
         background-color: #1878dc;
          opacity: 100%;
