--- a/pages/index.css
+++ b/pages/index.css
@@ -1,242 +1,10 @@
-.page{
-    font-family: "Inter", Arial, sans-serif;
-    min-width: 1100px;
-    max-width: 1600px;
-    font-size: 16px;
-    line-height: 20px;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.header{
-    padding: 30px 80px 40px;
-    min-height: 720px;
-    max-height: 800px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    background-image: url(../images/background_header.svg);
-}
-
-.nav__logo{
-    position: relative;
-    left: -50px;
-    width: 105px;
-    height: 39px;
-}
-
-.nav{
-    display: flex;
-    justify-content: space-between;
-}
-
-.nav__links{
-    display: flex;
-    padding: 0;
-    margin: 0;
-    list-style-type: none;
-    gap: 20px;
-}
-
-.nav__link{
-    color:#000;
-    text-decoration: none;
-    font-family: "Inter";
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.header__title{
-    max-width: 729px;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 60px;
-    line-height: 72px;
-    letter-spacing: -0.6px;
-    margin: 183px 0 0;
-}
-
-.header__description{
-    max-width: 683px;
-    margin: 28px 0 0;
-    font-family: "Noto Serif";
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
-}
-
-.header__span-accent{
-    display: flex;
-    font-family: "Noto Serif";
-    font-style: italic;
-    font-weight: 400;
-    font-size: 60px;
-    line-height: 72px;
-    color: #2f60ed;
-}
-
-.header__footer{
-    display: flex;
-    justify-content: space-between;
-    margin-top: auto;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-    color: #6f6f6f;
-}
-
-.header__paragraph{
-    margin: 0;
-    font-family: "Inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    color: #838383
-}
-
-.header__image{
-    width: 646px;
-    height: 568px;
-    position: absolute;
-    top: 124px;
-    right: -5px;
-}
-
-.recipes{
-    padding: 100px 80px 215px;
-    background-color: #0a2750;
-    background-image: url(../images/background_recipes.svg);
-    color: white;
-}
-
-.recipes__title{
-    max-width: 580px;
-    margin-bottom: 24px;
-    font-family: "inter";
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-}
-
-.recipes__subtitle{
-    max-width: 430px;
-    margin-bottom: 80px;
-    font-family: "Noto Serif";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 30px;
-}
-
-.recipes__videos{
-    display: flex;
-    gap: 100px;
-    justify-content: space-around;
-    width: 480px;
-    height: 273px;
-}
-
-.recipes__iframe{
-    margin-bottom: 24px;
-}
-
-.recipes__video-caption{
-    display: flex;
-    justify-content: space-between;
-    font-family: "Inter";
-    font-weight: 500;
-    font-style: normal;
-    font-size: 20px;
-    line-height: 30px;
-}
-
-.reservation{
-    padding: 100px 0 120px;
-    background-color: #D9E7FF;
-    background-image: url(../images/background_reservation.svg);
-}
-
-.reservation__title{
-    margin: 0 0 80px;
-    text-align: center;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 44px;
-    line-height: 52px;
-}
-
-.reservation__form{
-    margin: 0 auto;
-}
-
-.form__fieldset{
-    padding: 0;
-    margin: 0;
-    border: none;
-}
-
-.form{
-    max-width: 385px;
-}
-
-.form__input{
-    display: block;
-    width: 100%;
-    padding: 0;
-    box-sizing: border-box;
-    max-width: 385px;
-    height: 60px;
-    margin-top: 8px;
-    border-radius: 4px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 20px;
-    line-height: 30px;
-    color: #838383;
-}
-
-.form__button{
-    width: 100%;
-    padding: 0;
-    border: none;
-    height: 60px;
-    margin-bottom: 32px;
-    border-radius: 4px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-    background-color: #1878dc;
-    opacity: 100%;
-    color:white;
-}
-
- .form__button:hover{
-    background-color: #3f96f3;
-    opacity: 70%;
-}
-
-.form__label{
-    display: block;
-    margin: 0 0 32px;
-    font-family: Inter;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
-}
-
-.form__checkbox{
-    width: 20px;
-    height: 20px;
-    margin-right: 12px;
-}
+@import url(../blocks/pages.css);
+@import url(../blocks/header.css);
+@import url(../blocks/nav.css);
+@import url(../blocks/recipes.css);
+@import url(../blocks/reservation.css);
+@import url(../blocks/form.css);
+@import url(../blocks/card.css);
+@import url(../blocks/menu.css);
+@import url(../blocks/about.css);
+@import url(../blocks/footer.css);
