--- a/blocks/about.css
+++ b/blocks/about.css
@@ -10,12 +10,13 @@
 }
 
 .about__title{
-    max-width: 251px;
     font-family: "Inter";
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
     line-height: 52px;
+    max-width: 251px;
+    margin: 0;
 }
 
 .about__content{
@@ -28,6 +29,7 @@
     font-weight: normal;
     font-size: 20px;
     line-height: 30px;
+    margin: 0;
 }
 
 .about__circle{
