--- a/blocks/form.css
+++ b/blocks/form.css
@@ -6,7 +6,6 @@
 
 .form{
     max-width: 385px;
-    margin: 0 auto;
 }
 
 .form__input{
@@ -24,6 +23,9 @@
     font-size: 20px;
     line-height: 30px;
     color: #838383;
+    border-color: black;
+    border-width: 1px;
+    border-style: solid;
 }
 
 .form__button{
@@ -47,7 +49,6 @@
 
  .form__button:hover{
     background-color: #3f96f3;
-    opacity: 70%;
 }
 
 .form__label{
@@ -65,4 +66,5 @@
     height: 20px;
     margin-right: 12px;
     display: table-row;
+    border-radius: 2px;
 }
