--- a/blocks/header.css
+++ b/blocks/header.css
@@ -6,6 +6,9 @@
     display: flex;
     flex-direction: column;
     background-image: url(../images/background_header.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .header__title{
@@ -33,9 +36,8 @@
     font-family: "Noto Serif";
     font-style: italic;
     font-weight: 400;
-    font-size: 60px;
     line-height: 72px;
-    color: #2f60ed;
+    color: #2F80ED;
 }
 
 .header__footer{
