--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -2,8 +2,9 @@
     padding: 100px 0;
     background: url(../images/background_menu.svg);
     background-color: #fff;
-    background-repeat: no-repeat;
     background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,7 +18,6 @@
     font-size: 44px; 
     line-height: 52px;
     max-width: 780px;
-    padding: 0 240px;
 }
 
 .menu__subtitle{
@@ -28,6 +28,7 @@
     font-size: 20px; 
     line-height: 30px;
     max-width: 780px;
+    align-items: center;
 }
 
 .menu__cards{
