--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -3,6 +3,9 @@
     background-color: #0a2750;
     background-image: url(../images/background_recipes.svg);
     color: white;
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 .recipes__title{
@@ -13,6 +16,7 @@
     font-weight: 500;
     font-size: 44px;
     line-height: 52px;
+    margin-top: 0;
 }
 
 .recipes__subtitle{
@@ -23,18 +27,20 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
+    margin-top: 0;
 }
 
 .recipes__videos{
     display: flex;
-    gap: 100px;
+    gap: 40px;
     justify-content: space-around;
-    width: 480px;
-    height: 273px;
 }
 
 .recipes__iframe{
     margin-bottom: 24px;
+    width: 560px;
+    height: 315px;
+    border-bottom: none;
 }
 
 .recipes__video-caption{
@@ -45,4 +51,5 @@
     font-style: normal;
     font-size: 20px;
     line-height: 30px;
+    margin: 0;
 }
