--- a/blocks/about.css
+++ b/blocks/about.css
@@ -10,7 +10,7 @@
 }
 
 .about__title{
-    font-family: "Inter";
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -24,7 +24,7 @@
 }
 
 .about__paragraph{
-    font-family: "Noto Serif";
+    font-family: "Noto Serif" sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
