--- a/blocks/header.css
+++ b/blocks/header.css
@@ -9,11 +9,13 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+    z-index: 1;
 }
 
 .header__title{
     max-width: 729px;
-    font-family: "Inter";
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 60px;
@@ -25,7 +27,7 @@
 .header__description{
     max-width: 683px;
     margin: 28px 0 0;
-    font-family: "Noto Serif";
+    font-family: "Inter", "Arial", sans-serif;
     font-weight: 400;
     font-size: 20px;
     line-height: 30px;
@@ -33,7 +35,7 @@
 
 .header__span-accent{
     display: flex;
-    font-family: "Noto Serif";
+    font-family: "Inter", "Arial", sans-serif;
     font-style: italic;
     font-weight: 400;
     line-height: 72px;
@@ -44,17 +46,18 @@
     display: flex;
     justify-content: space-between;
     margin-top: auto;
-    font-family: "Inter";
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
     line-height: 20px;
     color: #6f6f6f;
+    align-items: end;
 }
 
 .header__paragraph{
     margin: 0;
-    font-family: "Inter";
+    font-family: "Inter" arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 16px;
@@ -68,4 +71,5 @@
     position: absolute;
     top: 124px;
     right: -5px;
+    z-index: -1;
 }
