--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -11,7 +11,7 @@
 .recipes__title{
     max-width: 580px;
     margin-bottom: 24px;
-    font-family: "inter";
+    font-family: "Inter", "Arial", sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -46,7 +46,7 @@
 .recipes__video-caption{
     display: flex;
     justify-content: space-between;
-    font-family: "Inter";
+    font-family: "Inter", "Arial", sans-serif;
     font-weight: 500;
     font-style: normal;
     font-size: 20px;
