--- a/blocks/form.css
+++ b/blocks/form.css
@@ -17,7 +17,7 @@
     height: 60px;
     margin-top: 8px;
     border-radius: 4px;
-    font-family: Inter;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
