--- a/blocks/about.css
+++ b/blocks/about.css
@@ -29,6 +29,10 @@
     font-weight: normal;
     font-size: 20px;
     line-height: 30px;
+    margin: 0 0 20px;
+}
+
+.about__paragraph:last-child{
     margin: 0;
 }
 
