--- a/blocks/nav.css
+++ b/blocks/nav.css
@@ -21,10 +21,11 @@
 .nav__link{
     color:#000;
     text-decoration: none;
-    font-family: "Inter", "Arial", sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-weight: 500;
     font-size: 16px;
     line-height: 20px;
+    transition: color 0.5s;
 }
 
 .nav__link:hover{
