--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -11,7 +11,7 @@
 .recipes__title{
     max-width: 580px;
     margin-bottom: 24px;
-    font-family: "Inter", "Arial", sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 44px;
@@ -22,7 +22,7 @@
 .recipes__subtitle{
     max-width: 430px;
     margin-bottom: 80px;
-    font-family: "Noto Serif";
+    font-family: "Noto Serif", "Times New Roman", serif;
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -33,20 +33,20 @@
 .recipes__videos{
     display: flex;
     gap: 40px;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .recipes__iframe{
     margin-bottom: 24px;
     width: 560px;
     height: 315px;
-    border-bottom: none;
+    border: none;
 }
 
 .recipes__video-caption{
     display: flex;
     justify-content: space-between;
-    font-family: "Inter", "Arial", sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-weight: 500;
     font-style: normal;
     font-size: 20px;
