New update for my project

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -17,7 +17,7 @@
 
 .footer__social-heading{
     margin: 0 0 20px;
-    font-family: 'Inter' Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -33,7 +33,7 @@
 .footer__social-link{
     color: white;
     text-decoration: none;
-    font-family: 'Inter' Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -60,7 +60,7 @@
 }
 
 .footer__copyright{
-    font-family: 'Inter' Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
