--- a/blocks/header.css
+++ b/blocks/header.css
@@ -35,7 +35,7 @@
 
 .header__span-accent{
     display: flex;
-    font-family: 'Inter', Arial, sans-serif;
+    font-family: "Noto Serif", "Times New Roman", serif;
     font-style: italic;
     font-weight: 400;
     line-height: 72px;
